SERVER-3295 report more details on cursors in serverstatus to facilitate troubleshooting